btn alignment fix

--- a/src/index.css
+++ b/src/index.css
@@ -79,6 +79,7 @@ code {
 }
 
 .close-button{
+  min-width:200px;
   margin:10px 10px 10px 10px;
 }
 .close{
