--- a/src/styles/components/layout.css
+++ b/src/styles/components/layout.css
@@ -65,7 +65,6 @@
   .button_width{
     min-width:200px;
     margin:0 auto;
-    margin-left:10px;
   }
 
   
